# StepBridge

./: README.md  main.py  pyproject.toml  run_locally.py  test_output.fbx  test_output_box.fbx  verify_fbx_output.py  verify_optimization.py
src/step_to_obj/: __init__.py  converter.py  gui.py  main.py
