[project]
name = "step-to-obj"
version = "0.1.0"
description = "STEP to OBJ converter with drag & drop GUI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "customtkinter>=5.2.0",
    "tkinterdnd2>=0.3.0",
    "cadquery-ocp>=7.7.0",
]

[project.scripts]
step-to-obj = "step_to_obj.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/step_to_obj"]
